# alpha

./: README.md  pyproject.toml
examples/project_alpha_data/pages/: page_1.md  page_2.md
examples/project_alpha_data/templates/: index.html
prompts/: prompt_01.md
scripts/: generate_markdown.py  generate_static_site.py  markdown_to_spec.py  new_static_site.py  process_input.py  spec_to_static_site.py
src/alpha/: __init__.py  git_actions.py  markdown_actions.py  media_markdown.py  static_site.py  static_site_actions.py
src/alpha/assets/: base.html  config.yml  index.html  page_1.md  style.css
